
next:
         - add new attribute "require password" which must be disabled to allow requests without password
         - disallow empty passwords and empty passwords no longer disable password authentication
         - update windows exporter to 0.30.8
         - msi: disable downgrades in windows installer
         - fix https includes from subsection (#246)

0.35     Fri Jun 13 16:30:25 CEST 2025
         - change showing performance data in check_files and check_services (#243)
         - kill orphanded managed exporters which might block listen ports
         - remove pipes from unknown macros in final output
         - only proxy /metrics instead of * for managed exporter
         - add option `url match` for managed exporter to configure which urls should be proxied
         - add support for enable modules from the module configuration instead of the modules section
         - fix crash in check_pdh

0.34     Wed May 28 13:56:57 CEST 2025
         - add /api/v1/admin/csr endpoint to create csr
         - add check_logfile
         - cache inventory for 10 seconds
         - fix check_omd out of bounds read
         - fix detecting unbalanced quotes (#225)
         - fix crash in check_pdh
         - fix reading config files with utf-8 bom

0.33     Fri Apr 11 16:05:32 CEST 2025
         - check_pdh: added windows performance counter check
         - check_service: fix case insensitive excludes
         - check_pagefile: fix crash if there is no pagefile
         - update windows exporter to 0.30.5
         - update node exporter to 1.9.1
         - check_dns: fix crash without any nameserver
         - change handling exporter arguments and keep quotes
         - change handling alias/script arguments and keep quotes
         - check_os_version: add kernel version/arch/hostname
         - fix timeout race condition when rebooting windows service
         - fix checking for allowed arguments / nasty characters for web api requests